// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index getAuthors should return all authors 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getAuthors": [
        {
          "books": [
            {
              "id": "1",
            },
            {
              "id": "2",
            },
            {
              "id": "3",
            },
          ],
          "firstName": "J.K.",
          "id": "1",
          "lastName": "Rowling",
        },
        {
          "books": [
            {
              "id": "4",
            },
          ],
          "firstName": "Dan",
          "id": "2",
          "lastName": "Gookin",
        },
        {
          "books": [],
          "firstName": "Ayn",
          "id": "3",
          "lastName": "Rand",
        },
        {
          "books": [],
          "firstName": "George",
          "id": "4",
          "lastName": "Orwell",
        },
        {
          "books": [],
          "firstName": "John",
          "id": "5",
          "lastName": "Steinbeck",
        },
        {
          "books": [],
          "firstName": "F. Scott",
          "id": "6",
          "lastName": "Fitzgerald",
        },
        {
          "books": [],
          "firstName": "Ray",
          "id": "7",
          "lastName": "Bradbury",
        },
        {
          "books": [],
          "firstName": "William",
          "id": "8",
          "lastName": "Faulkner",
        },
      ],
    },
    "errors": undefined,
  },
}
`;

exports[`index getBooks should return all books 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getBooks": [
        {
          "author": {
            "id": "1",
          },
          "categories": [
            {
              "id": "1",
            },
            {
              "id": "2",
            },
          ],
          "coverImage": "https://m.media-amazon.com/images/I/51mFoFmu0EL._AC_SY780_.jpg",
          "description": "Harry Potter and the Chamber of Secrets is a 1998 young adult fantasy novel by J.K. Rowling, the second in the Harry Potter series. The story follows Harry’s tumultuous second year at Hogwarts School of Witchcraft and Wizardry, including an encounter with Voldemort, the wizard who killed Harry’s parents. Against this fantastic backdrop, Rowling examines such themes as death, fame, friendship, choice, and prejudice. Upon release, the novel became a worldwide bestseller and won several awards, including Children’s Book of the Year at the British Book Awards and the Nestlé Smarties Book Award; it was subsequently adapted into a 2002 film directed by Chris Columbus.",
          "id": "1",
          "title": "Harry Potter and the Chamber of Secrets",
        },
        {
          "author": {
            "id": "1",
          },
          "categories": [
            {
              "id": "1",
            },
            {
              "id": "2",
            },
          ],
          "coverImage": "https://m.media-amazon.com/images/I/51DQeuJ5QDL._SY291_BO1,204,203,200_QL40_FMwebp_.jpg",
          "description": null,
          "id": "2",
          "title": "Harry Potter and the Prisoner of Azkaban",
        },
        {
          "author": {
            "id": "1",
          },
          "categories": [
            {
              "id": "1",
            },
            {
              "id": "2",
            },
          ],
          "coverImage": "https://m.media-amazon.com/images/I/51gy+g8Z+1L._SX343_BO1,204,203,200_.jpg",
          "description": null,
          "id": "3",
          "title": "Harry Potter and the Goblet of Fire",
        },
        {
          "author": {
            "id": "2",
          },
          "categories": [
            {
              "id": "3",
            },
          ],
          "coverImage": "https://m.media-amazon.com/images/I/51LNAmfIQ3L._SX404_BO1,204,203,200_.jpg",
          "description": null,
          "id": "4",
          "title": "C All in One Desk Reference For Dummies",
        },
      ],
    },
    "errors": undefined,
  },
}
`;

exports[`index getCategories should return all categories 1`] = `
{
  "kind": "single",
  "singleResult": {
    "data": {
      "getCategories": [
        {
          "books": [
            {
              "id": "1",
            },
            {
              "id": "2",
            },
            {
              "id": "3",
            },
          ],
          "id": "1",
          "name": "Fantasy",
        },
        {
          "books": [
            {
              "id": "1",
            },
            {
              "id": "2",
            },
            {
              "id": "3",
            },
          ],
          "id": "2",
          "name": "Fiction",
        },
        {
          "books": [
            {
              "id": "4",
            },
          ],
          "id": "3",
          "name": "Programming",
        },
      ],
    },
    "errors": undefined,
  },
}
`;
